ENHANCEMENT: Update templates in base.html and index.html
This commit makes small changes to the templates.

Changes:
- Update the website title colours in the navigation bar. Temporary colours: red and dark grey.
- Add the display of topic descriptions for topics on the homepage to provide more context.

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -15,20 +15,21 @@
                         <div class="card-body">
                             <div class="image-container">
                                 <div class="image-flash">
-                                    <p class="author">Author: {{ topic.author }}</p>
+                                    <!-- <p class="author">Author: {{ topic.author }}</p> -->
                                 </div>
                             </div>
                             <a href="#" class="post-link">
                                 <h2 class="card-title">{{ topic.title }}</h2>
+                                <p class="card-text">{{ topic.description }}</p>
                             </a>
 
                             <hr />
-                            <p class="card-text text-muted h6">{{ topic.created_on}}
+                            <!-- <p class="card-text text-muted h6">{{ topic.created_on}} -->
                             </p>
                         </div>
                     </div>
                 </div>
-                {% if forloop.counter|divisibleby:3 %}
+                {% if forloop.counter|divisibleby:2 %}
             </div>
             <div class="row">
                 {% endif %}
