FEAT: Add homepage topic view
This commit introduces a new view for displaying individual topics from the homepage.
It is still at a draft stage.

The view retrieves the post content from the database and renders it on a dedicated page.

Additionally, appropriate URL routing and template rendering logic have been implemented to support the new functionality.

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -4,13 +4,11 @@
 
 <!-- index.html content starts here -->
 <div class="container-fluid">
-    <div class="row">
-
-        <!-- Blog Entries Column -->
-        <div class="col-12 mt-3 left">
+    <div class="row justify-content-center"> <!-- Center the row horizontally -->
+        <div class="col-md-8 mt-2">
             <div class="row">
                 {% for topic in topic_list %}
-                <div class="col-md-4">
+                <div class="col-md-6"> <!-- Use col-md-6 for two columns -->
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
@@ -18,12 +16,11 @@
                                     <!-- <p class="author">Author: {{ topic.author }}</p> -->
                                 </div>
                             </div>
-                            <a href="#" class="post-link">
+                            <a href="{% url 'topic_detail' topic.slug %}" class="topic-link">
                                 <h2 class="card-title">{{ topic.title }}</h2>
                                 <p class="card-text">{{ topic.description }}</p>
                             </a>
-
-                            <hr />
+                            
                             <!-- <p class="card-text text-muted h6">{{ topic.created_on}} -->
                             </p>
                         </div>
@@ -34,23 +31,23 @@
             <div class="row">
                 {% endif %}
                 {% endfor %}
-
             </div>
         </div>
     </div>
-    {% if is_paginated %}
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            {% if page_obj.has_previous %}
-            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link"> PREV &laquo;</a></li>
-            {% endif %}
-            {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-            {% endif %}
-        </ul>
-    </nav>
-    {% endif %}
 </div>
+
+{% if is_paginated %}
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+        <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link"> PREV &laquo;</a></li>
+        {% endif %}
+        {% if page_obj.has_next %}
+        <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+        {% endif %}
+    </ul>
+</nav>
+{% endif %}
 
 <!-- index.html content ends here -->
 {% endblock %}
