--- a/homepage/templates/homepage/topic_detail.html
+++ b/homepage/templates/homepage/topic_detail.html
@@ -8,7 +8,7 @@
                 <!-- Topic title goes in these h1 tags -->
                 <h1 class="topic-title">{{ topic.title }}</h1>
                 <!-- Topic author goes before the | the topic's created date goes after -->
-                <p class="topic-subtitle">{{ topic.created_on }}</p>
+                <p class="topic-subtitle">{{ topic.description }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder">
@@ -21,11 +21,13 @@
     <div class="row">
         <div class="col card mb-4  mt-3 left  top">
             <div class="card-body">
+                {% for content in topic.content_set.all %}
                 <!-- The topic content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
                 <p class="card-text">
                     {{ topic.content | safe }}
                 </p>
+                {% endfor %}
             </div>
         </div>
     </div>
