--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 {% url 'home' as home_url %}
+{% url 'about_page' as about_url %}
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
@@ -44,6 +45,12 @@
                             href="{% url 'home' %}">Home</a>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link
+                             {% if request.path == about_page_url %}active{%endif%}" aria-current="page"
+                            href="{% url 'about_page' %}">About</a>
+                    </li>
+
                 </ul>
                 <span class="navbar-text text-muted">
                     Educate yourself and break free
@@ -73,7 +80,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
         </script>
-        
+
     <script src="{% static 'js/script.js' %}"></script>
 
 </body>
