FEAT: Add authentication using Django AllAuth
This commit adds user authentication using Django AllAuth library to enable user registration, login, and logout functionalities.

Changes:
- install and configure Django AllAuth package to manage user authentication;
- add necessary apps to INSTALLED_APPS in settings.py;
- set up constants SITE_ID, LOGIN_REDIRECT_URL, and LOGOUT_REDIRECT_URL for django-allauth configuration;
- integrate allauth middleware for user authentication;
- configure ACCOUNT_EMAIL_VERIFICATION to 'none' to disable email verification during registration;
- include account-related URLs in project-level urls.py;
- assign URLs to variables in base.html for easy access and linked registration, login, and logout functionalities;
- style the login and logout pages with a draft design.

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,9 @@
 
 {% url 'home' as home_url %}
 {% url 'about_page' as about_url %}
+{% url 'account_login' as login_url %}
+{% url 'account_signup' as signup_url %}
+{% url 'account_logout' as logout_url %}
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
@@ -50,7 +53,21 @@
                              {% if request.path == about_page_url %}active{%endif%}" aria-current="page"
                             href="{% url 'about_page' %}">About</a>
                     </li>
-
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
+                            href="{% url 'account_logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
+                            href="{% url 'account_signup' %}">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page"
+                            href="{% url 'account_login' %}">Login</a>
+                    </li>
+                    {% endif %}
                 </ul>
                 <span class="navbar-text text-muted">
                     Educate yourself and break free
