--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,12 @@
     </nav>
 
     <main class="flex-shrink-0 main-bg">
+        {% if user.is_authenticated %}
+        <p class="text-end m-3">You are logged in as {{ user }} </p>
+
+        {% else %}
+        <p class="text-end m-3">You are not logged in </p>
+        {% endif %}
 
         {% block content %}
         <!-- Content Goes here -->
