FEAT: Add JavaScript functionality to construct edit comment URL
This commit introduces a new JavaScript file to the project, which is responsible for constructing the edit comment URL dynamically. This enhancement improves user experience by allowing users to edit their comments without reloading the page.

--- a/homepage/templates/homepage/topic_detail.html
+++ b/homepage/templates/homepage/topic_detail.html
@@ -68,6 +68,9 @@
                         This comment is awaiting approval
                     </p>
                     {% endif %}
+                    {% if user.is_authenticated and comment.author == user %}
+                    <button class="btn btn-edit" comment_id="{{ comment.id }}">Edit</button>
+                    {% endif %}
                 </div>
                 <!-- Our for loop ends here -->
                 {% endfor %}
@@ -93,3 +96,7 @@
 </div>
 
 {% endblock content %}
+
+{% block extras %}
+<script src="{% static 'js/comments.js' %}"></script>
+{% endblock %}
