--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,8 @@
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
         </script>
 
-    <script src="{% static 'js/script.js' %}"></script>
+    {% block extras %}
+    {% endblock %}
 
 </body>
 
