--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <html class="h-100" lang="en">
 
 <head>
-    <title>Narcissism Personality Disorder: sources</title>
+    <title>Narcissism Personality Disorder: resources</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Google Fonts CSS -->
