--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="red-o brand">Narcissistic <span
-                        class="brand">Personality </span>Disorder <span class="brand">| Sources</span></span></a>
+                        class="brand">Personality </span>Disorder <span class="brand">| Resources</span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
