WORK IN PROGRESS: Attempt to fix rendering of resource_detail.html
Changes:
- attempt to implement views and template for rendering the resource detail;
- encounter issues where the content is not displaying correctly on the page;
- review code in views.py, resource_detail.html and topic_detail.html templates for any errors or misconfigurations;
- suspect potential issues with the logic in the template for rendering content based on its source;
- currently troubleshooting and trying to resolve the issue;
- save current progress to track changes and facilitate collaboration with others.

--- a/content_management/templates/content_management/resource_detail.html
+++ b/content_management/templates/content_management/resource_detail.html
@@ -6,13 +6,23 @@
         {% for content in content_set %}
         <div class="col-lg-4 mb-4">
             <!-- Reel Embed Code -->
-            {{ content.embed_code | safe }}
+            {% if content.source == 'instagram' %}
+                <!-- Use Instagram embed template. Inject the identifier using {{ content.source_identifier }} -->
+            {% elif content.source == 'youtube' %}
+            <!-- Use Youtube embed template -->
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/{{ content.source_identifier }}?si=7eRCL1TMBDgE7yQB"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen>
+            </iframe>
+            {% endif %}
         </div>
         {% endfor %}
     </div>
 </div>
 
-<!-- Add this debug statement in your template -->
+<!-- debug statement -->
 {% if content_set %}
 <ul>
     {% for content in content_set %}
