STYLE: Start adding styles to the website using colour palette
This commit starts adding style to the website, following an established colour palette based on shades of purple.

--- a/content_management/templates/content_management/resource_detail.html
+++ b/content_management/templates/content_management/resource_detail.html
@@ -8,6 +8,7 @@
             <!-- Reel Embed Code -->
             {% if content.source == 'instagram' %}
                 <!-- Use Instagram embed template. Inject the identifier using {{ content.source_identifier }} -->
+                {{ content.embed_code | safe }}
             {% elif content.source == 'youtube' %}
             <!-- Use Youtube embed template -->
             <iframe width="560" height="315"
