--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,161 +1,182 @@
 body {
-    background-color: #F9FAFC;
+  background-color: #f9fafc;
 }
 
 .brand {
-    font-family: Lato, sans-serif;
-    font-size: 1.4rem;
-    font-weight: 700;
-    color: #4A4A4F;
+  font-family: Lato, sans-serif;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #4a4a4f;
 }
 
-.red-o {
-    color: #E84610;
+.purple-part {
+  color: #692fc8;
 }
 
 .thin {
-    font-weight: 300;
+  font-weight: 300;
 }
 
 .light-bg {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .dark-bg {
-    background-color: #445261;
+  background-color: #594275;
+  color: #fff;
 }
 
 .main-bg {
-    background-color: #F9FAFC;
+  background-color: #f9fafc;
 }
 
 .card {
-    border: none;
-    background-color: transparent;
+  border: 2px solid #b1a8b9;
+  background-color: transparent;
 }
 
 .image-container {
-    position: relative;
+  position: relative;
 }
 
 .image-flash {
-    position: absolute;
-    bottom: 5%;
-    min-width: 30%;
-    left: -2px;
-    background-color: #188181;
+  position: absolute;
+  bottom: 5%;
+  min-width: 30%;
+  left: -2px;
+  background-color: #9d88b3;
 }
 
 .scale {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .author {
-    color: white;
-    margin: 4px;
-    text-transform: uppercase;
+  color: white;
+  margin: 4px;
+  text-transform: uppercase;
 }
 
 .masthead {
-    margin-top: 10px;
-    overflow: hidden;
-    position: relative;
-    display: inline-block;
-    height: 33vh;
-    width: 100%;
+  margin-top: 10px;
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+  height: 33vh;
+  width: 100%;
 }
 
 .masthead-text {
-    background-color: #445261;
-    color: white;
-    position: relative;
+  background-color: #692fc8;
+  color: white;
+  position: relative;
 }
 
 .masthead-image {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
 }
 
 .masthead-image:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 90%;
-    height: 100%;
-    width: 150%;
-    background: #445261;
-    -webkit-transform: skew(15deg);
-    -moz-transform: skew(15deg);
-    transform: skew(15deg);
-    z-index: 100;
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 90%;
+  height: 100%;
+  width: 150%;
+  background: #445261;
+  -webkit-transform: skew(15deg);
+  -moz-transform: skew(15deg);
+  transform: skew(15deg);
+  z-index: 100;
 }
 
-.post-link {
-    text-decoration: none;
-    color: #445261;
+.topic-link {
+  text-decoration: none;
+  color: #445261;
 }
 
-.post-link:hover,
+.topic-link:hover {
+  color: #692fc8;
+}
+
 .page-link {
-    color: #E84610;
+  color: #445261;
 }
 
 .topic-title {
-    margin-top: 10%;
-    margin-left: 5%;
+  margin-top: 10%;
+  margin-left: 5%;
 }
 
 .topic-subtitle {
-    margin-left: 5%;
-    color: lightgray;
+  margin-left: 5%;
+  color: lightgray;
 }
 
-.btn-signup,
+.btn-signup {
+  background-color: #9351ff;
+  color: #fff;
+}
+
 .btn-edit {
-    background-color: #188181;
-    color: #fff;
+  background-color: #baa1d5;
+  color: #fff;
+}
+
+.btn-edit:hover {
+  background-color: #a277d1;
+  color: #fff;
 }
 
 .btn-signup:hover,
 .btn-signup:active {
-    background-color: #fff;
-    color: #23BBBB;
+  background-color: #692fc8;
+  color: #fff;
 }
 
 .link {
-    color: #23BBBB;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
-.link:hover,
+.link:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+
 .link:active {
-    color: #445261;
-    text-decoration: underline;
+  color: #692fc8;
 }
 
 .btn-like {
-    color: #E84610;
-    border: none;
-    background: transparent;
+  color: #9d88b3;
+  border: none;
+  background: transparent;
 }
 
 .btn-delete {
-    color: #fff;
-    background: #E84610;
+  color: #fff;
+  background: #534f58;
+}
+
+.btn-delete:hover {
+  background: #ba0000;
+  color: #fff;
 }
 
 .btn-like:hover,
 .btn-like:active {
-    color: #E84610;
-    background: transparent;
-    border: none;
+  color: #fff;
+  background: #ba0000;
+  border: none;
 }
 
 .faded {
-    color: rgb(172, 175, 175);
+  color: #b1a8b9;
 }
 
 .approval {
-    color: rgb(222, 146, 168);
+  color: #baa1d5;
 }
