--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="red-o brand">Narcissistic <span
+            <a class="navbar-brand" href="{% url 'home' %}"><span class="purple-part brand">Narcissistic <span
                         class="brand">Personality </span>Disorder <span class="brand">| Resources</span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -106,7 +106,7 @@
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">Made by Stefania Frustagli</p>
+        <p class="m-0 text-center">Made by Stef</p>
         <!-- <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
             <i class="fab fa-twitter-square ms-3"></i>
             <i class="fab fa-instagram-square ms-3"></i>
