--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -9,7 +9,7 @@
             <div class="row">
                 {% for topic in topic_list %}
                 <div class="col-md-6"> <!-- Use col-md-6 for two columns -->
-                    <div class="card mb-4">
+                    <div class="card mb-4 h-95">
                         <div class="card-body">
                             <div class="image-container">
                                 <div class="image-flash">
