FIX: Resolve the issue with rendering reels in the resource_detail template
This commit resolves the issue with reels not being displayed. However, they are now looping multiple times, issue which still needs to be addressed.

Change:
- update the iteration in resource_detail.html to use topic.content_set.all instead of content_set.

To be addressed:
- repeated reels due to looping issue.

--- a/content_management/templates/content_management/resource_detail.html
+++ b/content_management/templates/content_management/resource_detail.html
@@ -3,11 +3,11 @@
 <div class="container">
     <!-- Embedded Instagram Reels -->
     <div class="row justify-content-center">
-        {% for content in content_set %}
+        {% for content in topic.content_set.all %}
         <div class="col-lg-4 mb-4">
             <!-- Reel Embed Code -->
             {% if content.source == 'instagram' %}
-                <!-- Use Instagram embed template. Inject the identifier using {{ content.source_identifier }} -->
+            <!-- Use Instagram embed template. Inject the identifier using {{ content.source_identifier }} -->
                 {{ content.embed_code | safe }}
             {% elif content.source == 'youtube' %}
             <!-- Use Youtube embed template -->
@@ -24,14 +24,13 @@
 </div>
 
 <!-- debug statement -->
-{% if content_set %}
+{% if topic.content_set.all %}
 <ul>
-    {% for content in content_set %}
+    {% for content in content_set.all %}
     <li>{{ content.title }}</li>
     {% endfor %}
 </ul>
 {% else %}
 <p>No content available</p>
 {% endif %}
-
 {% endblock content %}
