FIX: Resolve looping issue and ensure reels appear side by side
This commit adjustes the rendering logic to fix the looping issue where content was repeated multiple times based on the number of reels. Additionally, applied styling changes to ensure that reels are displayed side by side for improved presentation.

Changes:
- reorganise the layout in topic_detail.html using Bootstrap's grid system;
- enclose the loop for rendering reels with a div.row in topic_detail.html;
- place inside a div.col-lg-4 col-md-6 col-sm-12 column to ensure proper alignment and responsiveness across different screen sizes.

--- a/content_management/templates/content_management/resource_detail.html
+++ b/content_management/templates/content_management/resource_detail.html
@@ -1,36 +1,17 @@
 {% block content %}
-
-<div class="container">
-    <!-- Embedded Instagram Reels -->
-    <div class="row justify-content-center">
-        {% for content in topic.content_set.all %}
-        <div class="col-lg-4 mb-4">
-            <!-- Reel Embed Code -->
-            {% if content.source == 'instagram' %}
-            <!-- Use Instagram embed template. Inject the identifier using {{ content.source_identifier }} -->
-                {{ content.embed_code | safe }}
-            {% elif content.source == 'youtube' %}
-            <!-- Use Youtube embed template -->
-            <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/{{ content.source_identifier }}?si=7eRCL1TMBDgE7yQB"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen>
-            </iframe>
-            {% endif %}
-        </div>
-        {% endfor %}
-    </div>
+<div class="reel-container">
+    <!-- Reel Embed Code -->
+    {% if content.source == 'instagram' %}
+    <!-- Use Instagram embed template. Inject the identifier using {{ content.source_identifier }} -->
+    {{ content.embed_code | safe }}
+    {% elif content.source == 'youtube' %}
+    <!-- Use Youtube embed template -->
+    <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/{{ content.source_identifier }}?si=7eRCL1TMBDgE7yQB"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+    </iframe>
+    {% endif %}
 </div>
-
-<!-- debug statement -->
-{% if topic.content_set.all %}
-<ul>
-    {% for content in content_set.all %}
-    <li>{{ content.title }}</li>
-    {% endfor %}
-</ul>
-{% else %}
-<p>No content available</p>
-{% endif %}
 {% endblock content %}
