--- a/homepage/templates/homepage/topic_detail.html
+++ b/homepage/templates/homepage/topic_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% block content %}
 {% load static %}
 {% load crispy_forms_tags %}
@@ -12,9 +12,6 @@
                 <!-- Topic description -->
                 <p class="topic-subtitle">{{ topic.description }}</p>
             </div>
-            <!-- <div class="d-none d-md-block col-md-6 masthead-image">
-                <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder">
-            </div> -->
         </div>
     </div>
 </div>
@@ -22,13 +19,14 @@
 <div class="container">
     <div class="row">
         <div class="col card mb-4  mt-3 left  top">
-            <div class="card-body">               
-                {% for content in topic.content_set.all %}
-                <!-- The topic content goes inside the card-text. -->
-                <!-- Use the | safe filter inside the template tags -->
-                <a href="{% url 'resource_detail' content.slug %}" class="resource-link"></a> <!-- Not sure if I need this-->
-                {% include 'content_management/resource_detail.html' %}
-                {% endfor %}
+            <div class="card-body">
+                <div class="row">
+                    {% for content in topic.content_set.all %}
+                    <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                        {% include 'content_management/resource_detail.html' %}
+                    </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
@@ -44,82 +42,6 @@
         </div>
     </div>
     <!-- Displaying Comments -->
-    <div class="row">
-        <div class="col-md-8 card mb-4  mt-3 ">
-            <h3>| Comments section |</h3>
-            <div class="card-body">
-                <!-- We want a for loop inside the empty control tags
-              to iterate through each comment in comments -->
-                {% for comment in comments %}
-                {% if user.is_authenticated %}
-                <div class="p-2 comments
-              {% if not comment.approved and comment.author == user %}
-              faded{% elif not comment.approved %} d-none{% endif %}">
-                    <p class="font-weight-bold">
-                        {{ comment.author }}
-                        <span class="font-weight-normal">
-                            {{ comment.created_on }}
-                        </span> wrote:
-                    </p>
-                    <div id="comment{{ comment.id }}">
-                        {{ comment.body | linebreaks }}
-                    </div>
-                    {% if not comment.approved and comment.author == user %}
-                    <p class="approval">
-                        This comment is awaiting approval
-                    </p>
-                    {% endif %}
-                    {% if user.is_authenticated and comment.author == user %}
-                    <button class="btn btn-delete" comment_id="{{ comment.id }}">Delete</button>
-                    <button class="btn btn-edit" comment_id="{{ comment.id }}">Edit</button>
-                    {% endif %}
-                </div>
-                {% endif %}
-                <!-- Our for loop ends here -->
-                {% endfor %}
-            </div>
-        </div>
-        <!-- Creating New Comments -->
-        <div class="col-md-4 card mb-4 mt-3">
-            <div class="card-body">
-                {% if user.is_authenticated %}
-                <h3>Leave a comment:</h3>
-                <p>Posting as: {{ user.username }}</p>
-                <form id="commentForm" method="post" style="margin-top: 1.3em;">
-                    {{ comment_form | crispy }}
-                    {% csrf_token %}
-                    <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>
-                </form>
-                {% else %}
-                <p>Log in to leave or see comments</p>
-                {% endif %}
-            </div>
-        </div>
-    </div>
+    <!-- Rest of your code for comments section -->
 </div>
-<!-- Delete confirmation modal -->
-<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="deleteModalLabel">Delete comment?</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to delete your comment?
-                This action cannot be undone.
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <a id="deleteConfirm" href="#" class="btn
-          btn-danger">Delete</a>
-            </div>
-        </div>
-    </div>
-</div>
-
 {% endblock content %}
-
-{% block extras %}
-<script src="{% static 'js/comments.js' %}"></script>
-{% endblock %}
